6中OOM验证和分析